src/test/compile-fail/while-expr.rs
// error-pattern: precondition constraint

fn main() { let x: bool; while x { } }